# Infotecs2023_CXX

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: Buffer.hpp  Converter.hpp  ServerController.hpp  Socket.hpp  UserInputController.hpp
Client/src/: Buffer.cpp  Converter.cpp  ServerController.cpp  Socket.cpp  UserInputController.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: Server.hpp
Server/src/: Server.cpp
lib/Socket/: CMakeLists.txt
lib/Socket/include/: Socket.hpp
lib/Socket/src/: Socket.cpp
